Fix padding bug on smaller screens
One of the rules in the media query was overwriting
padding for todo items and making the items appear
too close together on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -217,6 +217,7 @@ ul {
     }
 
     main h1, main > div, .todos li, .lists li, #add-new-item {
-        padding: 0 1rem 0 1rem;
+        padding-left: 1rem; 
+        padding-right: 1rem;
     }
 }
